fixed button and description size & spacing

--- a/style.css
+++ b/style.css
@@ -163,16 +163,6 @@ nav {
     top: 5%;
 }
 
-
-/* grid layout for blocks */
-
-#channel-blocks {
-  display: grid;
-  justify-content: center;
-  width: 65%;
-  margin: 0 auto;
-}
-
 /* filter nav */
 button {
     font-family: var(--sans-serif);
@@ -181,8 +171,37 @@ button {
     background: #6d466588;
     padding: var(--spacing);
     border-radius: 2rem;
+    margin-bottom: 2rem;
 }
 
+@media (width>600px){
+    button {
+    font-size: calc(var(--body-copy)*1.2);
+    padding: calc(var(--spacing)*1.2);
+
+}
+}
+
+@media (width>900px){
+    button {
+    font-size: calc(var(--body-copy)*1.5);
+    padding: calc(var(--spacing)*1.5);
+
+}
+
+    nav {
+    gap: 1rem;
+    }
+}
+
+
+/* grid layout for blocks */
+#channel-blocks {
+  display: grid;
+  justify-content: center;
+  width: 65%;
+  margin: 0 auto;
+}
 
 
 #channel-blocks {
@@ -221,7 +240,9 @@ button {
 }
 
 .des-spacing {
-    padding-block: 5rem;
+    margin-block: 3rem;
+    display: flex;
+    justify-content: center;
 }
 
 #channel-description p{
@@ -230,11 +251,14 @@ button {
     font-size: calc(var(--body-copy)*1.1);
     max-width: 35ch;
     text-align: center;
-    margin: 0 auto;
 }
 
 
 @media (width>600px) {
+
+    .des-spacing {
+    margin-block: 5rem;
+}
 
     #channel-description p{
     font-size: calc(var(--body-copy)*1.7);
@@ -260,6 +284,7 @@ button {
     background-position: center;
     background-size: contain;
 }
+
 
 /* repeat plate-1, plate-2, plate-3 */
 .block.plate:nth-child(4n+1){ background-image: url("assets/plate-1-t.png"); }
@@ -290,25 +315,16 @@ button {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    display: block;
 }
 
 
 audio {
 	block-size: revert;
 	inline-size: 100%;
-    margin-top: 2rem;width: 100%;
     max-width: 100%;
-    display: block;
 }
 
-.audio-block .plate-content{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: .25rem;
-  box-sizing: border-box;
-}
+
 
 .view-text {
     display: flex;
